- Removed container class in the index file so that application would scale to the full browser width. - Updated styling to hide buttons on narrow screens. - Changed midi note type drop down to a select element so it can easily be bound to a model. - Updated midi-input directive tests to properly compile the isolated scope. - Still working on testing midi-input type is defaulted correctly.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,11 @@ html
     background-color: black;
 }
 
+select
+{
+    margin-bottom: 0;
+}
+
 .container3Col
 {
     width: 100%;
@@ -65,7 +70,7 @@ button.midiNoteType
 .container3Col.midiInputHeader .centerCol
 {
     margin-left: 60px;
-    margin-right: 300px;
+    margin-right: 315px;
 }
 
 .container3Col.oscPathRow .centerCol
@@ -104,6 +109,17 @@ button.oscHost
     width: 100px;
 }
 */
+
+input.midiNote
+{
+
+}
+
+select.midiNoteType
+{
+    width: 75px;
+}
+
 select.oscHost
 {
     width: 100px;
@@ -204,4 +220,22 @@ select.oscHost
 {
     background-color: red;
     padding: 25px;
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px)
+{
+    .container3Col .rightCol
+    {
+        display: none;
+    }
+
+    .container3Col .leftCol
+    {
+    }
+
+    .container3Col.midiInputHeader .centerCol
+    {
+        margin-right: 0px;
+    }
 }
